Kuvi map rules are added

--- a/Telugu/Kuvi2IPA/Telugu2IPAConverter.ipynb
+++ b/Telugu/Kuvi2IPA/Telugu2IPAConverter.ipynb
@@ -271,46 +271,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-32-ddce0ec00257>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-32-ddce0ec00257>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    unicodedata.decimal()?\u001b[0m\n\u001b[1;37m                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "unicodedata.lookup()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'dict_items' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-35-be3d67eccffc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mchar_inventory\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'dict_items' object is not subscriptable"
-     ]
-    }
-   ],
-   "source": [
-    "for key, value in char_inventory.items()[:5]:\n",
-    "    print(key)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [
@@ -384,6 +344,327 @@
    ],
    "source": [
     "char_inventory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "no such name",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-104-60b7c71baae0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mcodepoint\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0x0c01\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0xc7f\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mtel_cons\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mchr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcodepoint\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mname\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0municodedata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtel_cons\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[0mindic2IPA\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: no such name"
+     ]
+    }
+   ],
+   "source": [
+    "indic2IPA = {}\n",
+    "for codepoint in range(0x0c01,0xc7f):\n",
+    "    tel_cons = chr(codepoint)\n",
+    "    name = unicodedata.name(tel_cons)\n",
+    "    try:\n",
+    "        indic2IPA[name.lower().split()[-1]] = \"\"\n",
+    "    except:\n",
+    "        #print(name)\n",
+    "        pass\n",
+    "#print(\"char: {}, name: {}, ipa: {}\".format(tel_cons, \"_\".join((name.lower().split())), \"?\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tel_alphabets = {\n",
+    "    0x0c01: {\"char\":\"ఁ\", \"name\": \"Telugu Sign Candrabindu\",\"ipa\": \"◌̃\"},\n",
+    "    0x0c02: {\"char\":\"ం\",\"name\": \"Telugu Sign Anusvara\", \"ipa\":\"m̃\"}\n",
+    "                }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getIPA(char):\n",
+    "    indic2IPA = {\n",
+    "        \"ka\": \"k\", \"kha\": \"kʰ\", \"ga\": \"g\", \"gha\": \"gʰ\", \"nga\": \"ŋ\"\n",
+    "        \n",
+    "    }\n",
+    "    return(indic2IPA.get(char, \"?\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'candrabindu': '',\n",
+       " 'anusvara': '',\n",
+       " 'visarga': '',\n",
+       " 'above': '',\n",
+       " 'a': '',\n",
+       " 'aa': '',\n",
+       " 'i': '',\n",
+       " 'ii': '',\n",
+       " 'u': '',\n",
+       " 'uu': '',\n",
+       " 'r': '',\n",
+       " 'l': ''}"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "indic2IPA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alphabet = \"\\u0d15\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"malayalam_letter_ka\" <> k ; ക\n"
+     ]
+    }
+   ],
+   "source": [
+    "#print(\"char: {}, unicode name: {}, IPA: {}\".format(alphabet, \"_\".join(unicodedata.name(alphabet).lower().split()), getIPA(unicodedata.name(alphabet).lower().split()[-1])))\n",
+    "print('\"{}\" <> {} ; {}'.format(\"_\".join(unicodedata.name(alphabet).lower().split()), getIPA(unicodedata.name(alphabet).lower().split()[-1]), alphabet))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3073"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0x0c01"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'౿'"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\\u0c7f\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "telugu_sign_candrabindu <> \"candrabindu\" ; ఁ\n",
+      "telugu_sign_anusvara <> \"anusvara\" ; ం\n",
+      "telugu_sign_visarga <> \"visarga\" ; ః\n",
+      "telugu_sign_combining_anusvara_above <> \"above\" ; ఄ\n",
+      "telugu_letter_a <> \"a\" ; అ\n",
+      "telugu_letter_aa <> \"aa\" ; ఆ\n",
+      "telugu_letter_i <> \"i\" ; ఇ\n",
+      "telugu_letter_ii <> \"ii\" ; ఈ\n",
+      "telugu_letter_u <> \"u\" ; ఉ\n",
+      "telugu_letter_uu <> \"uu\" ; ఊ\n",
+      "telugu_letter_vocalic_r <> \"r\" ; ఋ\n",
+      "telugu_letter_vocalic_l <> \"l\" ; ఌ\n",
+      "telugu_letter_e <> \"e\" ; ఎ\n",
+      "telugu_letter_ee <> \"ee\" ; ఏ\n",
+      "telugu_letter_ai <> \"ai\" ; ఐ\n",
+      "telugu_letter_o <> \"o\" ; ఒ\n",
+      "telugu_letter_oo <> \"oo\" ; ఓ\n",
+      "telugu_letter_au <> \"au\" ; ఔ\n",
+      "telugu_letter_ka <> \"ka\" ; క\n",
+      "telugu_letter_kha <> \"kha\" ; ఖ\n",
+      "telugu_letter_ga <> \"ga\" ; గ\n",
+      "telugu_letter_gha <> \"gha\" ; ఘ\n",
+      "telugu_letter_nga <> \"nga\" ; ఙ\n",
+      "telugu_letter_ca <> \"ca\" ; చ\n",
+      "telugu_letter_cha <> \"cha\" ; ఛ\n",
+      "telugu_letter_ja <> \"ja\" ; జ\n",
+      "telugu_letter_jha <> \"jha\" ; ఝ\n",
+      "telugu_letter_nya <> \"nya\" ; ఞ\n",
+      "telugu_letter_tta <> \"tta\" ; ట\n",
+      "telugu_letter_ttha <> \"ttha\" ; ఠ\n",
+      "telugu_letter_dda <> \"dda\" ; డ\n",
+      "telugu_letter_ddha <> \"ddha\" ; ఢ\n",
+      "telugu_letter_nna <> \"nna\" ; ణ\n",
+      "telugu_letter_ta <> \"ta\" ; త\n",
+      "telugu_letter_tha <> \"tha\" ; థ\n",
+      "telugu_letter_da <> \"da\" ; ద\n",
+      "telugu_letter_dha <> \"dha\" ; ధ\n",
+      "telugu_letter_na <> \"na\" ; న\n",
+      "telugu_letter_pa <> \"pa\" ; ప\n",
+      "telugu_letter_pha <> \"pha\" ; ఫ\n",
+      "telugu_letter_ba <> \"ba\" ; బ\n",
+      "telugu_letter_bha <> \"bha\" ; భ\n",
+      "telugu_letter_ma <> \"ma\" ; మ\n",
+      "telugu_letter_ya <> \"ya\" ; య\n",
+      "telugu_letter_ra <> \"ra\" ; ర\n",
+      "telugu_letter_rra <> \"rra\" ; ఱ\n",
+      "telugu_letter_la <> \"la\" ; ల\n",
+      "telugu_letter_lla <> \"lla\" ; ళ\n",
+      "telugu_letter_llla <> \"llla\" ; ఴ\n",
+      "telugu_letter_va <> \"va\" ; వ\n",
+      "telugu_letter_sha <> \"sha\" ; శ\n",
+      "telugu_letter_ssa <> \"ssa\" ; ష\n",
+      "telugu_letter_sa <> \"sa\" ; స\n",
+      "telugu_letter_ha <> \"ha\" ; హ\n",
+      "telugu_sign_avagraha <> \"avagraha\" ; ఽ\n",
+      "telugu_vowel_sign_aa <> \"aa\" ; ా\n",
+      "telugu_vowel_sign_i <> \"i\" ; ి\n",
+      "telugu_vowel_sign_ii <> \"ii\" ; ీ\n",
+      "telugu_vowel_sign_u <> \"u\" ; ు\n",
+      "telugu_vowel_sign_uu <> \"uu\" ; ూ\n",
+      "telugu_vowel_sign_vocalic_r <> \"r\" ; ృ\n",
+      "telugu_vowel_sign_vocalic_rr <> \"rr\" ; ౄ\n",
+      "telugu_vowel_sign_e <> \"e\" ; ె\n",
+      "telugu_vowel_sign_ee <> \"ee\" ; ే\n",
+      "telugu_vowel_sign_ai <> \"ai\" ; ై\n",
+      "telugu_vowel_sign_o <> \"o\" ; ొ\n",
+      "telugu_vowel_sign_oo <> \"oo\" ; ో\n",
+      "telugu_vowel_sign_au <> \"au\" ; ౌ\n",
+      "telugu_sign_virama <> \"virama\" ; ్\n",
+      "telugu_length_mark <> \"mark\" ; ౕ\n",
+      "telugu_ai_length_mark <> \"mark\" ; ౖ\n",
+      "telugu_letter_tsa <> \"tsa\" ; ౘ\n",
+      "telugu_letter_dza <> \"dza\" ; ౙ\n",
+      "telugu_letter_rrra <> \"rrra\" ; ౚ\n",
+      "telugu_letter_vocalic_rr <> \"rr\" ; ౠ\n",
+      "telugu_letter_vocalic_ll <> \"ll\" ; ౡ\n",
+      "telugu_vowel_sign_vocalic_l <> \"l\" ; ౢ\n",
+      "telugu_vowel_sign_vocalic_ll <> \"ll\" ; ౣ\n",
+      "telugu_digit_zero <> \"zero\" ; ౦\n",
+      "telugu_digit_one <> \"one\" ; ౧\n",
+      "telugu_digit_two <> \"two\" ; ౨\n",
+      "telugu_digit_three <> \"three\" ; ౩\n",
+      "telugu_digit_four <> \"four\" ; ౪\n",
+      "telugu_digit_five <> \"five\" ; ౫\n",
+      "telugu_digit_six <> \"six\" ; ౬\n",
+      "telugu_digit_seven <> \"seven\" ; ౭\n",
+      "telugu_digit_eight <> \"eight\" ; ౮\n",
+      "telugu_digit_nine <> \"nine\" ; ౯\n",
+      "telugu_fraction_digit_zero_for_odd_powers_of_four <> \"four\" ; ౸\n",
+      "telugu_fraction_digit_one_for_odd_powers_of_four <> \"four\" ; ౹\n",
+      "telugu_fraction_digit_two_for_odd_powers_of_four <> \"four\" ; ౺\n",
+      "telugu_fraction_digit_three_for_odd_powers_of_four <> \"four\" ; ౻\n",
+      "telugu_fraction_digit_one_for_even_powers_of_four <> \"four\" ; ౼\n",
+      "telugu_fraction_digit_two_for_even_powers_of_four <> \"four\" ; ౽\n",
+      "telugu_fraction_digit_three_for_even_powers_of_four <> \"four\" ; ౾\n",
+      "telugu_sign_tuumu <> \"tuumu\" ; ౿\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ch in range(3073, 3200):\n",
+    "    try:\n",
+    "        teckName = teckitize_me(ch)\n",
+    "        ipaChar = (teckName.split(\"_\")[-1])\n",
+    "        print('{} <> \"{}\" ; {}'.format(teckName, ipaChar, chr(ch)))\n",
+    "    except Exception as e:\n",
+    "        # print(\"; {}, {} may be an empty slot in unicode chart\".format(str(e)), hex(ch))\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'TELUGU SIGN TUUMU'"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unicodedata.name(chr(3199))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def teckitize_me(ch):\n",
+    "    return \"_\".join(unicodedata.name(chr(ch)).lower().split())\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "malayalam_letter_lla\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(teckitize_me(3379))"
    ]
   },
   {
