add kuvi map and related files

--- a/Telugu/Kuvi2IPA/Telugu2IPAConverter.ipynb
+++ b/Telugu/Kuvi2IPA/Telugu2IPAConverter.ipynb
@@ -669,6 +669,78 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "header_metadata = \"\"\"\n",
+    "; This file was created by <beniza> using TECkitMappingEditorU.exe v4.0.0.0 on 12/17/2019.\n",
+    ";   Conversion Type = Legacy_to_from_Unicode\n",
+    ";   Left-hand side font = Gautami;18\n",
+    ";   Right-hand side font = Charis SIL;15.75\n",
+    ";   Main Window Position = 0,0,658,713\n",
+    ";   Left-hand side Character Map Window Position = 658,0,457,447\n",
+    ";   Right-hand side Character Map Window Position = 658,447,457,413\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "header = \"\"\"\n",
+    "EncodingName            \"Telugu2IPA\"\n",
+    "DescriptiveName         \"A Telugu to IPA converter\"\n",
+    "Version                 \"1\"\n",
+    "Contact                 \"mailto:beniza@gmail.com\"\n",
+    "RegistrationAuthority   \"New Life Computer Institute\"\n",
+    "RegistrationName        \"in.nlci.encodingconverter.telu2ipa\"\n",
+    "Copyright               \"© 2019 NLCI. CC-BY-SA.\"\n",
+    "LHSFlags                ()\n",
+    "RHSFlags                ()\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DEVANAGARI SIGN INVERTED CANDRABINDU, 0x900\n",
+      "BENGALI ANJI, 0x980\n",
+      "GURMUKHI SIGN ADAK BINDI, 0xa01\n",
+      "GUJARATI SIGN CANDRABINDU, 0xa81\n",
+      "ORIYA SIGN CANDRABINDU, 0xb01\n",
+      "TAMIL SIGN ANUSVARA, 0xb82\n",
+      "TELUGU SIGN COMBINING CANDRABINDU ABOVE, 0xc00\n",
+      "KANNADA SIGN SPACING CANDRABINDU, 0xc80\n",
+      "MALAYALAM SIGN COMBINING ANUSVARA ABOVE, 0xd00\n",
+      "SINHALA SIGN ANUSVARAYA, 0xd82\n"
+     ]
+    }
+   ],
+   "source": [
+    "def printUni(ch):\n",
+    "    try:\n",
+    "        print(\"{}, {}\".format(unicodedata.name(chr(ch)), hex(ch)))\n",
+    "    except Exception as e:\n",
+    "        printUni(ch+1)\n",
+    "\n",
+    "base = 2304 # Devanagari (the first of the Indic Script blocks)\n",
+    "for scriptnum in range (10):\n",
+    "    ch = base + (scriptnum * 128) # Each Indic Unicode block is of the size 128\n",
+    "    printUni(ch)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
